<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RobotinoController</string>
    <string name="btnDriveText">Kjør</string>
    <string name="btnConnectText">Trykk for å koble til</string>
    <string name="btnOffline">Offline modus</string>
    <string name="outputText"></string>
    <string name="settings_title">Innstillinger</string>
    <string name="checkbox_coordinates_text">Vis koordinater</string>
    <string name="checkbox_coordinates_summary">Du kan deaktivere koordinatvisningen.</string>
	<string name="checkbox_x_text">X</string>
	<string name="checkbox_x_summary">Du kan deaktivere x verdien</string>
	<string name="checkbox_y_text">Y</string>
	<string name="checkbox_y_summary">Du kan deaktivere y verdien</string>
	<string name="checkbox_z_text">Z</string>
	<string name="checkbox_z_summary">Du kan deaktivere z verdien</string>
	<string name="checkbox_offlineMode_text">Offline modus</string>
	<string name="checkbox_offlineMode_summary">Du kan bruke appen i offline modus</string>
	<string name="crash_message">Robotino har krasjet!</string>
	<string name="connected_message">Koblet til server!</string>
	<string name="finish_dialog_title">Enheten har ikke gyroskop!</string>
	<string name="finish_dialog_message">Appen vil avsluttes når du trykker på OK</string>
	<string name="ok_button">OK</string>
	<string name="connect_to_server_message">Kobler til server&#8230;</string>
</resources>
